welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:10: error: ';' expected but 'if' found.
	}if ( a+b+10 == b+c+a+c){
         ^